# AISnap

./: .gitignore  BSP_NOTE.md  CMakeLists.txt  README.md
App/: CMakeLists.txt
App/plam_search/: pd_anchors.c  pd_anchors.h  pipeline.h
App/plam_search/AI/: app_x-cube-ai.c  app_x-cube-ai.h  npu_init.c  user_init.h
App/plam_search/Network/: 033_palm_detection_full_quant_pc_ff_od_OE_3_3_1_Q.json  network.c  network.h  network_033_palm_detection_full_quant_pc_ff_od_c_info_generate.json  network_atonbuf.xSPI2.c  network_ecblobs.h  network_generate_report.txt  stai_network.c  stai_network.h
BSP/: CMakeLists.txt  bsp_init.c  bsp_init.h
BSP/HyperRAM/: hyperram.c  hyperram.h
BSP/LED/: led.c  led.h
BSP/NORFlash/: norflash.c  norflash.h  norflash_by25fq128el.c  norflash_by25fq128el.h  norflash_mx25um25645g.c  norflash_mx25um25645g.h  norflash_xspi.c  norflash_xspi.h
BSP/OV5640/: ov5640.c  ov5640.h  ov5640_dcmipp.c  ov5640_dcmipp.h  ov5640af.h  ov5640cfg.h  sccb.c  sccb.h
BSP/RGBLCD/: rgblcd.c  rgblcd.h  rgblcdfont.h
BSP/SYS/: sys.c  sys.h
BSP/UART/: uart.c  uart.h
Core/: CMakeLists.txt
Core/Inc/: FreeRTOSConfig.h  hw_init.h  main.h  rif_config.h  stm32n6xx_hal_conf.h  stm32n6xx_it.h
Core/Src/: hw_init.c  main.c  rif_config.c  stm32n6xx_hal_msp.c  stm32n6xx_hal_timebase_tim.c  stm32n6xx_it.c  syscalls.c  sysmem.c
Device/LD/: STM32N647X0HXQ_LRUN_RAMxspi1.ld  STM32N647X0HXQ_LRUN_RAMxspi1_xspi2_weights.ld
Device/Startup/: startup_stm32n647x0hxq.s
Drivers/CMSIS/DSP/: CMakeLists.txt
Drivers/CMSIS/DSP/Source/: configDsp.cmake
Drivers/STM32N6xx_HAL_Driver/: CMakeLists.txt
Drivers/STM32N6xx_HAL_Driver/Src/: stm32n6xx_hal_rif.c
Middlewares/: CMakeLists.txt
tool/: build_weights.bat  check_data.py  img2bin.py  jpg2c.py  jpg2c_disp.py  test_image.h
tool/cmake/: arm-none-eabi-toolchain.cmake  armclang-toolchain.cmake  compile.cmake
